--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Site Blue</title>
 </head>
 <body>
-    <h1>Hello Blumers!</h1>
+    <h1><%= titulo %></h1>
+    <p> Ola alunos da blue!!!</p>
+    <img src="/imgs/blue.jfif" alt="logo blue ed tech">
+    <a href="/pagina"> pagina</a>"
 </body>
 </html>
